tests/NormalTests/paczka1/fuzzy1/47886350.err
Error in line 1: TCh A807 40,6
Error in line 11: TCh A219 -2,7
Error in line 13: oB8u A807 19,3
Error in line 12: Bahrt2 A219 62,1
Error in line 5: A219 S294 64,4
Error in line 26: MCUBRWWoxL A807 30,4
